2016-01-26  Per Bothner  <per@bothner.com>

	* LispLanguage.java (parse): In a REPL it works better if we parse
	forms until end-of-line.

	* LispReader.java (readValuesAndAppend): Fix off-by-one error
	in column number.

2016-01-16  Per Bothner  <per@bothner.com>

	Support for #A array reader syntax with Guile extensions.
	* LispReader.java (readGeneralArray): New method.
	(dimensionsFromNested, fromNested): New helper methods.
	(readSimpleVector [2 methods], convertListToArray):
	Remove methods specifically for uniform vectors.
	* ReaderDispatch.java: Add entry for "#A".
	* ReaderDispatchMisc.java: Handle #A.
	Change uniform verctors syntax (#U8, #S8, etc) to use readGeneralArray.

2016-01-11  Per Bothner  <per@bothner.com>

	* ReaderDispatch.java (read): Use new Lexer.readIntDigits.
	* ReaderDispatchMisc.java: Better error message for #MAXr.

2015-10-12  Per Bothner  <per@bothner.com>

	* LangPrimType.java (emitCoerceFromObject): Handle stringCursorType.

2015-08-16  Per Bothner  <per@bothner.com>

	* LangObjType.java (emitConvertFromPrimitive):  Fix how we
	convert unsigned int to IntNum.

2015-07-31  Per Bothner  <per@bothner.com>

	* LispReader.java  (parseNumber): Handle generalized FString.

2015-06-23  Per Bothner  <per@bothner.com>

	* LangObjType.java (dynamicType): New type.
	(DYNAMIC_TYPE_CODE): New type code.
	(isCompatibleWithValue, getConstructor): Support dynamicType.
	* LispLanguage.java (getTypeMap): Add 'dynamic'.

2015-06-11  Per Bothner  <per@bothner.com>

	* LangObjType.java (getInstanceFromClass): New static method.
	(elementGetterMethodName, elementSetterMethodName): New methods.
	* LispLanguage.java (getTypeFor): Use getInstanceFromClass.

	* LangObjType.java (sequenceType): New "sequence" type, implemented
	as java.util.List.

	* LispLanguage.java (getTYpeMap): Add binding for "sequence".

2015-06-08  Per Bothner  <per@bothner.com>

	* LangObjType.java (class SimpleVectorBuilder):	Modify constructor.